Fix info button alignment on dbot

--- a/packages/bot-web-ui/src/components/toolbar/toolbar.scss
+++ b/packages/bot-web-ui/src/components/toolbar/toolbar.scss
@@ -58,6 +58,7 @@
     }
     &__animation {
         margin-right: 0.5rem;
+        max-width: 35rem;
     }
     &__dialog {
         &-text--second {
